Add infinite scroll

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
         </form>
       </div>
     </header>
-  
-
     <div class="gallery" >
     </div>
+    <div class="target-element"></div>
     <button type="button" class="load-more-btn">Load more</button>
     <script src="index.js" type="module"></script>
+    <!-- <script src="infiniteScroll.js" type="module"></script> -->
   </body>
 </html>
